# sw-desgin-patterns

./: .gitignore
observer_pattern/: CMakeLists.txt  IObserver.hpp  README.md  coronaDataCenter.cpp  coronaDataCenter.hpp  coronaDataObserver.hpp  main.cpp
observer_pattern/src/: CMakeLists.txt  coronaDataCenter.hpp  coronaDataObserver.cpp  coronaDataObserver.hpp
observer_pattern/src/interfaces/: IObservable.hpp
singleton/: CMakeLists.txt  main.cpp
singleton/src/: CMakeLists.txt  randomNumGenerator.cpp  randomNumGenerator.hpp
